--- a/war/index.html
+++ b/war/index.html
@@ -22,6 +22,9 @@
       <tr>
         <td><a href="yfat_yolles_project">Yfat_yolles_project</a></td>
       </tr>
+         <tr>
+        <td><a href="ex04">Ex04</a></td>
+      </tr>
     </table>
   </body>
 </html>
