--- a/war/index.html
+++ b/war/index.html
@@ -23,7 +23,7 @@
         <td><a href="yfat_yolles_project">Yfat_yolles_project</a></td>
       </tr>
          <tr>
-        <td><a href="StockDetailsServlet">StockDetailsServlet</a></td>
+        <td><a href="stockDetails">StockDetailsServlet</a></td>
       </tr>
     </table>
   </body>
