--- a/war/index.html
+++ b/war/index.html
@@ -7,24 +7,27 @@
 <!-- but may lead to some differences in layout.   -->
 
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Hello App Engine</title>
-  </head>
+<head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<title>Hello App Engine</title>
+</head>
 
-  <body>
-    <h1>Hello yfat!</h1>
-	
-    <table>
-      <tr>
-        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
-      </tr>
-      <tr>
-        <td><a href="yfat_yolles_project">Yfat_yolles_project</a></td>
-      </tr>
-         <tr>
-        <td><a href="stockDetails">StockDetailsServlet</a></td>
-      </tr>
-    </table>
-  </body>
+<body>
+	<h1>Hello yfat!</h1>
+
+	<table>
+		<tr>
+			<td colspan="2" style="font-weight: bold;">Available Servlets:</td>
+		</tr>
+		<tr>
+			<td><a href="yfat_yolles_project">Yfat_yolles_project</a></td>
+		</tr>
+		<tr>
+			<td><a href="stockDetails">StockDetailsServlet</a></td>
+		</tr>
+		<tr>
+			<td><a href="portfolio">PortfolioServlet</a></td>
+		</tr>
+	</table>
+</body>
 </html>
