--- a/war/index.html
+++ b/war/index.html
@@ -26,7 +26,7 @@
 			<td><a href="stockDetails">StockDetailsServlet</a></td>
 		</tr>
 		<tr>
-			<td><a href="portfolio">PortfolioServlet</a></td>
+			<td><a href="portfolio">exe 5 ­ show portfolio</a></td>
 		</tr>
 	</table>
 </body>
